--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: python
 python:
     - 3.6
-install:
-  - pip install -r requirements.txt
-  - pip install -e .
+    - nightly
 script:
     - pytest
